--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 
 
 .dark {
-   background-color: #23272F
+   background-color: #181B21
 }
 
 
@@ -37,7 +37,7 @@
  
  
     .input {
-       @apply py-3.5 px-4 text-sm text-gray-700 dark:text-gray-100 bg-slate-100 dark:bg-[#2D3748] rounded-md  w-full placeholder-slate-400 focus:outline-none focus:border-primary focus:ring-1 focus:ring-violet-400;
+       @apply py-3.5 px-4 text-sm text-gray-700 dark:text-gray-100 bg-slate-100 dark:bg-mediumGrey rounded-sm  w-full placeholder-slate-400 focus:outline-none focus:border-primary focus:ring-1 focus:ring-primary/90;
     }
  
     .link {
