--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@
    }
 
    .primary-btn {
-      @apply text-gray-100 bg-primary hover:bg-primary/90;
+      @apply text-gray-100 bg-primary hover:bg-primary/90 disabled:bg-gray-300 disabled:text-gray-500;
    }
 
    .primary-outline-btn {
