--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,11 +44,17 @@
    .box {
       @apply bg-white dark:bg-darkGrey shadow-sm border border-gray-600 hover:border-primary/90  rounded-sm px-4 py-5 sm:p-6 lg:p-8;
    }
+
    .label {
       @apply text-gray-600 dark:text-gray-100 text-sm;
    }
+
    .hover-transition {
       @apply transform transition duration-300;
+   }
+
+   .ease-in-out-transition {
+      @apply transform transition-all duration-300 ease-in-out;
    }
 
    .click-transition {
